# molfeat-kpgt

./: .gitignore  README.md  pyproject.toml  setup.py
molfeat_kpgt/: __init__.py
molfeat_kpgt/calc/: __init__.py  kpgt.py
molfeat_kpgt/src/: model_config.py  utils.py
molfeat_kpgt/src/data/descriptors/: rdDescriptors.py  rdkit_fixes.py
molfeat_kpgt/src/helper_scripts/: extract_features.py  preprocess_downstream_dataset.py  preprocess_pretrain_dataset.py  test_script.py
molfeat_kpgt/src/model/: light.py
molfeat_kpgt/trans/: kpgt_nfp.py
tests/: test_import.py  test_kpgt_fingerprints.py  test_padel_descriptors.py
